--- a/second.css
+++ b/second.css
@@ -321,8 +321,8 @@ height: 200px;
 .initi-img{
 width: 100%;
 height: 300px; 
-  object-fit: contain; 
-  border-radius: 50px 0 0 50px; /* Specify corner radii */
+object-fit: contain; 
+  /* border-radius: 50px 0 0 50px; */
   /* object-fit: cover;  */
   
 }
