--- a/second.css
+++ b/second.css
@@ -2,6 +2,10 @@ a{
   text-decoration: none !important;
 }
 
+.whole-page{
+  margin: 0 20px;
+}
+
 
 /* NAV BAR  */
 
@@ -25,16 +29,29 @@ align-items: center;
   font-size: 20px;
 }
 
-.rydr-btn{
+/* .rydr-btn{
   background-color:  #fde8e8!important;
   color: black !important;
   padding: 0 !important;
   text-align: center;
+} */
+.banner-btn-1{
+background-color: black !important;
+color: white !important;
+line-height: 35px;
+text-align: center;
 }
+
+.banner-btn-2{
+  background-color:#c91919 !important;
+  color: white !important;
+  line-height: 35px;
+  text-align: center;
+  }
 
 
 p{
-font-size: 20px;
+font-size: 1rem;
 /* font-size: 16px; */
 font-family: 'Poppins,snas-serif';
 font-weight: 400;
@@ -64,22 +81,27 @@ line-height:inherit;
     color: #1e9c61;
 }
 
+.mission-heading{
+margin-right: 225px;
+}
+
 .about-us-content{
   display: flex;
   flex-direction: row;
+  
   margin: 40px 10px; 
+  gap: 50px;
 }
 
 .mission-content{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  justify-content: center; 
 }
 
 .mission-content p {
-  padding: 0 80px;
+ 
   /* font-size:20px; */
 }
 
@@ -89,7 +111,7 @@ line-height:inherit;
   object-fit: contain;
 }
 .mission-img-3{
-  width: 30%;
+  width: 40%;
   /* height: 100px; */
 }
 .second-top{
@@ -163,6 +185,11 @@ line-height:inherit;
 }
 
 .customer-cards,.driver-cards{
+
+  background-color: #fde8e8;
+  width: 70%;
+  padding: 20px;
+
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -170,6 +197,8 @@ line-height:inherit;
     text-align: center;
     align-items: center;
     justify-content: center;
+    border-radius: 20px;
+    font-size: 10px;
 }
 
 .customer-cards h5{
@@ -177,11 +206,19 @@ line-height:inherit;
     
 }
 
-.customer-cards img{
+.customer-cards img , .driver-cards img{
     width: 150px;
     height: 150px;
+    padding-top: 10px;
+    /* object-fit: contain; */
 }
 
+
+
+.cust-box-1{
+  width: 100%;
+
+}
 
 .section-margin{
     margin-top: 50px;
@@ -306,7 +343,7 @@ height: 200px;
 #footer {
     background-color: #212529;  /* Black background color */
     color: #fff;               /* White text color */
-    padding: 30px 0;
+    padding: 50px 0;
     margin-top: 30px;
   }
   
@@ -342,6 +379,11 @@ height: 200px;
   #footer .btn-primary {
     background-color: rgb(221, 33, 33);
     border-color: white;
+  }
+  .social-icons img{
+    width: 35px;
+    height: 35px;
+    /* object-fit: contain; */
   }
   
   .app-png img{
