--- a/css/style.css
+++ b/css/style.css
@@ -702,7 +702,7 @@ input:focus {
 
 @media only screen and (max-width: 767px) {
   .classy-nav-container {
-    padding: 0 15px;
+    /* padding: 0 15px; */
   }
 }
 
