--- a/responsive/responsive.md.css
+++ b/responsive/responsive.md.css
@@ -12,6 +12,41 @@
         width: 250px;
     }
 
+    /* Mission  */
+
+    .mission-heading {
+        margin-right: 0; /* Remove margin for smaller screens */
+      }
+      
+      .about-us-content {
+        flex-direction: column; /* Stack elements vertically on smaller screens */
+        align-items: center; /* Center items vertically */
+        gap: 20px; /* Reduce gap between elements */
+      }
+      
+      .mission-content {
+        text-align: center; /* Center text content */
+        /* Add some bottom margin */
+      }
+      
+      .mission-img
+      {
+        width: 80%; /* Make images take 80% width on smaller screens */
+        max-width: 300px; /* Set maximum width for images */
+      }
+      
+      /* Reorder image above content */
+      .mission-content {
+        order: 2; /* Set content order to 2 */
+      }
+      
+      .mission-img,
+      .mission-img-3 {
+        order: 1; /* Set image order to 1 */
+      }
+
+      /* Safety  */
+
     .safety-top{
         justify-content: end;
         align-items: center;
@@ -41,6 +76,10 @@
     .safety-text{
         padding: 0px;
     }
+
+    .customer-safety-cards {
+        width: 100%; /* Set full width on smaller screens */
+      }
 
     .text-shrink{
         padding: 0 30px;
