--- a/responsive/responsive.md.css
+++ b/responsive/responsive.md.css
@@ -1,5 +1,9 @@
 @media only screen and (max-width: 768px) {
 
+  .classy-nav-container .classy-navbar{
+    height: 60px;
+  }
+
     h2{
         font-size: 35px !important;
     }
