--- a/responsive/responsive.sm.css
+++ b/responsive/responsive.sm.css
@@ -1,4 +1,5 @@
 @media only screen and (max-width: 425px) {
+ 
     .second-top{
         display: flex;
         flex-direction: column;
@@ -20,6 +21,10 @@
 
    .driver-cards img{
     width: 140px;
+   }
+
+   .customer-safety-cards{
+    width: 75%;
    }
 
     .driver-cards{
