--- a/responsive/responsive.sm.css
+++ b/responsive/responsive.sm.css
@@ -1,5 +1,8 @@
 @media only screen and (max-width: 425px) {
  
+    .login{
+        width: 75%;}
+      
     .second-top{
         display: flex;
         flex-direction: column;
