--- a/second.css
+++ b/second.css
@@ -61,14 +61,6 @@ font-weight: 400;
 line-height:inherit;
 }
 
-.green-text{
-  color: #1e9c61 !important;
-  /* background-color: #1e9c61; */
- /* background-color:#C30000 ;
- border-radius: 20px;
- padding: 0 9px; */
-/* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
-}
 
 .know-more{
   background-color:#C30000;
@@ -81,9 +73,84 @@ line-height:inherit;
   text-transform: lowercase;
 }
 
-.color-green{
-    color: #1e9c61;
+/* Login Form  */
+.login{
+  width: 30%;
+  height: 50%;
+  position: absolute;
+left: 50%;
+top: 50%;
+
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-color: rgb(255, 255, 255);
+border-radius: 20px;
+box-shadow: 0px 0px 4px rgb(197 10 10);
+transform: translate(-50%,-50%);
 }
+
+.login-form{
+
+ font-family: Aileron;
+display: flex;
+justify-content: center;
+align-items: center;
+
+border-radius: 10px;
+}
+
+.form-group{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 20px;
+}
+
+.login-form input{
+  width: 100%;
+  margin-left:5%;
+  border-radius: 20px;
+}
+
+.login-form-body{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.loginBTN{
+  background-color: #C30000;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  font-size: 1rem;
+  border-radius: 10px;
+}
+
+.loginBTN:hover{
+  background-color:white;
+  color: #C30000;
+  border: 1px solid  #C30000;
+}
+
+#toggle-password {
+  margin: 5px;
+  background: none;
+  border: none;
+  color: #C30000;
+  cursor: pointer;
+  padding: 0;
+  font-size: 1.2em;
+}
+/* login edit */
+
+/* login edit  ends*/
+
+
+/* Mission  */
 
 .mission-heading{
 margin-right: 225px;
@@ -226,8 +293,6 @@ padding: 5px 0;
     padding-top: 10px;
     /* object-fit: contain; */
 }
-
-
 
 .section-margin{
     margin-top: 40px;
@@ -421,6 +486,18 @@ padding: 0 70px;
   
     
   }
+
+  .social-media{
+position: fixed;
+width: 100px;
+height: 100px;
+bottom: 80px;
+right: 50px;
+text-decoration: none;
+text-align: center;
+line-height: 50px;
+  }
+
   .address p {
   font-size: 13px;
   }
