--- a/second.css
+++ b/second.css
@@ -75,12 +75,6 @@ line-height:inherit;
 
 /* Login Form  */
 .login{
-  width: 30%;
-  height: 50%;
-  position: absolute;
-left: 50%;
-top: 50%;
-
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -88,7 +82,11 @@ align-items: center;
 background-color: rgb(255, 255, 255);
 border-radius: 20px;
 box-shadow: 0px 0px 4px rgb(197 10 10);
-transform: translate(-50%,-50%);
+margin: 10px;
+}
+
+.login label{
+  font-size: 1rem;
 }
 
 .login-form{
@@ -99,6 +97,29 @@ justify-content: center;
 align-items: center;
 
 border-radius: 10px;
+}
+
+.log-sec {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  flex-direction: column;
+}
+
+.reg-but{
+background-color: #C30000;
+color: white;
+padding: 10px;
+font-size: 1.3rem;
+border-radius: 20px;
+border: 1px solid  white;
+}
+
+.reg-but:hover{
+  background-color:white;
+  color: #C30000;
+  border: 1px solid  #C30000;
 }
 
 .form-group{
@@ -128,6 +149,9 @@ border-radius: 10px;
   text-align: center;
   font-size: 1rem;
   border-radius: 10px;
+  border: none;
+  margin: 10px 0;
+  border: 1px solid  white;
 }
 
 .loginBTN:hover{
