--- a/second.css
+++ b/second.css
@@ -601,7 +601,7 @@ line-height: 50px;
   /* font-size: 10px; */
 }
 
-/* Drviver Registration acoordians / */
+
 
 
 .next-btn{
@@ -656,8 +656,8 @@ object-fit: contain;
     display: flex;
     flex-direction: row;
     /* flex-wrap: wrap; */
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-evenly;
+    /* align-items: center; */
     gap: 15px;
     
 }
