--- a/responsive/responsive.sm.css
+++ b/responsive/responsive.sm.css
@@ -103,4 +103,8 @@ width: 100%;
     .initi-img{
         height: 200px;
     }
+
+    .planting-section p,h1{
+        padding-left: 0;
+      }
 }
