--- a/responsive/responsive.md.css
+++ b/responsive/responsive.md.css
@@ -127,6 +127,10 @@ border: 0px;
       padding-left: 0;
     }
 
+    .side-padding{
+      padding-left: 0;
+      padding-right: 0;
+    }
 
   
   }
