--- a/second.css
+++ b/second.css
@@ -539,10 +539,10 @@ padding: 0 70px;
   }
   
   .app-png img{
-    width: 100px;
-    height: 50px;
+    width: 170px;
+    height: 70px;
     object-fit: contain;
-  
+  margin-top: 5px;
     
   }
 
