--- a/second.css
+++ b/second.css
@@ -36,8 +36,9 @@ a{
 
 .sub-heading::after{
     content: "";
+    text-align: center;
     background: #c30000;
-    width: 70px;
+    width: 90px;
     height: 2px;
     position: absolute;
     left: 0;
@@ -322,9 +323,49 @@ margin-right: 225px;
     align-items: center;
 }
 
-.bottom-img{
-    width: 100%;
-    justify-content: center;
+/* why-choose  */
+.why-choose {
+  display: flex;
+  width: 90%;
+  max-width: 1000px;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+}
+.why-choose-content, .why-choose-image {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.why-choose-content {
+  background-color: #fde8e8;
+}
+.why-choose-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.points {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+.points li {
+  margin-bottom: 10px;
+}
+/* why choose ends  */
+
+.why-chooose{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.points p {
+  color: #212529;
 }
 
 /* <!-- Coustomers --> */
@@ -676,7 +717,7 @@ line-height: 50px;
 
 /* Initiatives  */
 .initiative-top{
-    margin-top: 100px;
+    /* margin-top: 100px; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -687,8 +728,11 @@ line-height: 50px;
 width: 100%;
 height: 300px; 
 object-fit: contain; 
+}
+
  
-  
+.master-heading{
+margin-top: 50px;
 }
 
 .details{
@@ -736,8 +780,8 @@ object-fit: contain;
 }
 
 .side-padding{
-  padding-left: 150px;
-  padding-right: 150px;
+  /* padding-left: 150px; */
+  /* padding-right: 150px; */
 }
 
   /* New section styles */
