--- a/second.css
+++ b/second.css
@@ -934,7 +934,7 @@ margin-top: 50px;
 }
 .methods-desc{
     text-align: center;
-    padding: 0px 65px;
+    padding: 0px 65px !important;
     
     
 }
